[package]
name = "scylla-isolation-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.6.1"
tokio = { version = "1.23.0",  features = ["io-util", "time", "net", "sync", "rt-multi-thread","parking_lot","signal"] }

[profile.dev]
panic = 'abort'
